Wraps up content of about page - a few minor fixes.

--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -139,7 +139,7 @@
   font-size: 22px;
   text-shadow: 0px 0px 10px #0000001a;
   padding: 0px 25px;
-  line-height: 33px;
+  line-height: 36px;
   max-width: 715px;
   margin: 0 auto;
   padding-bottom: 22px;
